--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  flip_card: ^0.6.0
+  device_info_plus: ^3.2.1
+  socket_io_client: ^1.0.2
+  http: ^0.13.4
+  share_plus: ^3.0.4
 
 dev_dependencies:
   flutter_test:
