--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   socket_io_client: ^1.0.2
   http: ^0.13.4
   share_plus: ^3.0.4
-
+  intl: ^0.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
